# novel-gen

./: .env.example  .env.template  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  ENV_SETUP.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  STRUCTURE.md  VERBOSE_MODE.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_all_chapter_generation.py  test_batch_chapter_plan.py  test_chapter_memory.py  test_consistency_check.py  test_embedding_config.py  test_export.py  test_memory_chunks_db.py  test_memory_chunks_integration.py  test_memory_context_chain.py  test_query_interfaces.py  test_qwen_embedding.py  test_step6_chapter_text_force.py  重构文档.md
.cursor/commands/: commit-code2.md
.cursor/rules/: base.mdc
.windsurf/rules/: base.md
.windsurf/workflows/: commit-code.md  plan.md
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  base.py  continuity.py  noop.py  registry.py
app/bootstrap/: __init__.py  bootstrap.py
app/generation/: __init__.py  fakes.py  providers.py  template_providers.py
app/graph/: __init__.py  builder.py  routing.py  run_config.py  state.py
app/retrieval/: __init__.py  documents.py  index.py
app/schemas/: __init__.py  artifacts.py  base.py  chapter.py  context_pack.py  issues.py  validation.py
app/storage/: __init__.py  artifact_store.py  langgraph_sqlite_checkpointer.py
docs/: CLI.md  ENV_SETUP.md  MVP_TASKS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  STRUCTURE.md  chapter_loop_workflow_implementation.md  dev_setup.md  langgraph-migration.md  mem0-migration.md  mem0-setup.md  memory_chunks_fix_summary.md  persistence_demo.md  validate-stage2-implementation-summary.md  vector_reindex_guide.md  web_api.md  web_app_planning.md  对话式Agent使用指南.md  小说生成完整流程说明.md  工作流优化.md  开发文档.md  当前还存在的问题-20251115.md  数据库与向量库渐进式落地方案.md  知识图谱使用指南.md  章节计划调整.md
docs/思考/: 20251211.md
examples/: resume_workflow.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  (+3 more)
novelgen/: __init__.py  cli.py  config.py  example_settings.json  llm.py  models.py
openspec/: project.md
projects/: .gitkeep
scripts/: README.md  check_mem0_health.py  clear_mem0_memory.py  export_mem0_to_json.py  list_project_memory.py  merge_scenes_to_chapter.py  query_entity.py  query_scene_memory.py  reindex_vectors.py  view_chapter.py
tests/: __init__.py  test_api_web.py  test_artifact_store.py  test_audit_chapter.py  test_bootstrap.py  test_chapter_loop_workflow.py  test_chat_targeted_generation.py  test_checkpointing.py  test_continue.py  test_conversation_context.py  test_end_to_end.py  test_fine_grained_tools.py  test_integration.py  test_intent_parser.py  test_langgraph_integration.py  test_logic_review_gate.py  test_mem0_basic.py  test_plugins.py  test_retrieval_and_context_pack.py  test_revision_loop.py  test_routing.py  test_schemas.py  test_state_model.py  test_state_persistence.py
(+265 files in other folders)
