[project]
name = "novel-gen"
version = "0.1.0"
description = "基于 LangChain 的 AI 小说生成器"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Jamesenh", email = "jamesenh@example.com"},
]
keywords = ["novel", "generation", "ai", "langchain", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Artistic Software",
]
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-core>=0.1.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "chromadb>=1.3.4",
    "mem0ai>=0.1.0",
    "pytest>=9.0.1",
]

[project.urls]
Homepage = "https://github.com/jamesenh/novel-gen"
Repository = "https://github.com/jamesenh/novel-gen"
Issues = "https://github.com/jamesenh/novel-gen/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["novelgen*"]

[tool.setuptools.package-data]
novelgen = ["*.json", "*.md"]
